6/21/18 (BWH): Nick modified the makefile, provided the c-library, and modified fit_wrapper.c so that it will compile on summit.

--- a/Makefile_original
+++ b/Makefile_original
@@ -5,7 +5,7 @@
 ######################### BEGIN BLOCK
 
 ### LIBRARIES
-FITSLOC=/projects/feathern/software/cfitsio/3.4.5
+FITSLOC=/shared/cfitsio
 #FITSLOC=/home8/begr7169/SOFTWARE/cfitsio
 FITSLIB=$(FITSLOC)/lib
 FITSINC=$(FITSLOC)/include
@@ -13,37 +13,30 @@ FITSINC=$(FITSLOC)/include
 FFTWLOC=/shared/fftw-3.2.1
 FFTWLIB=$(FFTWLOC)/lib
 FFTWINC=$(FFTWLOC)/include
-FFTWINC=$(CURC_MKL_INC)/fftw
 
 MKL = -L/central/intel/mkl/lib/em64t -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -liomp5 -lpthread
-MKL = -L$(MKLROOT)/lib/intel64 -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -liomp5 -lpthread -lm -ldl
-#MKL = -mkl
 FFTW = -I/shared/fftw/include -L/shared/fftw/lib -lfftw3
-FFTW = -I$(CURC_MKL_INC)/fftw
-
 CFITSIO = -L/shared/cfitsio-3.24/lib -lcfitsio 
-CFITSIO = -L$(FITSLIB) -lcfitsio
+
 # ALL C LIBRARIES
-CLIBS = $(MKL) $(CFITSIO) $(FFTW) -lm 
+CLIBS = $(MKL) $(CFITSIO) $(FFTW) -lm
 # ALL FORTRAN LIBRARIES
 FLIBS = -I$(FFTWINC) -L$(FFTWLIB) -lfftw3 -L$(FITSLIB) -lcfitsio -I$(FITSINC) $(FLAGS) -I/home8/begr7169/SOFTWARE/openmpi-1.6.5/include -L/home8/begr7169/SOFTWARE/openmpi-1.6.5/lib
-FLIBS = -I$(FFTWINC) $(CFITSIO) -I$(FITSINC) $(FLAGS) 
 
 ######################### END BLOCK
 
 
 
 # FORTRAN COMPILE FLAGS
-FFLAGS = -O2 -xCORE-AVX2 -ip -ipo -g -CB -free -qopenmp -I.
+FFLAGS = -O2 -ip -ipo -g -CB -free -openmp
 # C COMPILE FLAGS
-CFLAGS = -O2 -xCORE-AVX2 -ip -ipo -g -I. -I$(FITSINC) -I$(CURC_MKL_INC)
+CFLAGS = -O2 -ip -ipo -g
 # CROSS-COMPILE FLAGS
-ALLFLAGS = -O2 -ip -ipo -qopenmp
+ALLFLAGS = -O2 -ip -ipo -openmp
 
 # FORTRAN COMPILER
 #F90 = /home8/begr7169/SOFTWARE/openmpi-1.6.5/bin/mpif90
 F90 = mpif90
-F90 = mpiifort
 # C COMPILER
 ICC = icc
 
@@ -55,10 +48,10 @@ FOBJECTS = ParseInput.o \
 		  File_Management.o \
 		  Interpolation.o \
 		  Timing.o \
-		  Fit.o \
 		  Pspec.o \
 		  Track.o \
 		  Grid.o \
+		  Fit.o \
 		  Main.o
 
 COBJECTS = fit.o \
@@ -74,17 +67,22 @@ COBJECTS = fit.o \
 
 # compile fortran and C parts together
 $(EXECUTABLE) : $(FOBJECTS) $(COBJECTS)
+	$(info ************ CAUTION: TRY COMPILING TWICE OR MORE BEFORE BELIEVING ANY ERROR MESSAGES ************)
+	$(info ************ COMPILING ALL TOGETHER ************)
 	$(F90) $(ALLFLAGS) -o $(EXECUTABLE) $(FOBJECTS) $(COBJECTS) $(FLIBS) $(CLIBS)
 
 
 # compile C parts
 $(COBJECTS) : *.c
+	$(info ************ CAUTION: TRY COMPILING TWICE OR MORE BEFORE BELIEVING ANY ERROR MESSAGES ************)
+	$(info ************ COMPILING C CODE ************)
 	$(ICC) -c $(CFLAGS) *.c $(CLIBS)
 
 # compile FORTRAN parts
-#$(FOBJECTS) : *.F90
-%.o : %.F90
-	$(F90) -c $(FFLAGS) $< $(FLIBS) -o$@
+$(FOBJECTS) : *.F90
+	$(info ************ CAUTION: TRY COMPILING TWICE OR MORE BEFORE BELIEVING ANY ERROR MESSAGES ************)
+	$(info ************ COMPILING FORTRAN CODE ************)
+	$(F90) -c $(FFLAGS) *.F90 $(FLIBS)
 
 
 clean : 
